# nunchaku

./: .clang-format  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE.txt  MANIFEST.in  README.md  README_ZH.md  amend_metadata.py  nunchaku_models.yaml  pyproject.toml  requirements.txt  setup.py  upload_models.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
.github/workflows/: auto-merge-main-into-dev.yaml  auto-merge-main-into-dev.yml  build-docs.yaml  clean-nightly-releases.yaml  close-inactive-issues.yaml  close_inactive_issues.yaml  lint.yaml  merge-main-into-dev.yaml  nightly-build.yaml  pr-test.yaml  pr_test.yaml  pr_test_5090.yaml  pr_test_ampere.yaml  pr_test_blackwell.yaml  pr_test_linux.yaml  release-build.yaml  reopen-issues.yaml  run_all_tests.py  sync-hf-ms.yaml  sync-hf-to-ms.yaml  sync-to-private.yml  test-ampere.yaml  test-blackwell.yaml  test_ampere.yaml  (+2 more)
ISSUE_TEMPLATE/: 2-feature-request.yml
comfyui/: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
comfyui/nodes/lora/: __init__.py  flux.py
comfyui/nodes/models/: __init__.py  flux.py  text_encoder.py
comfyui/nodes/preprocessors/: __init__.py  depth.py
comfyui/workflows/: flux.1-canny-svdquant.json  flux.1-depth-svdquant.json  flux.1-fill-svdquant.json  svdq-flux.1-canny.json  svdq-flux.1-depth.json  svdq-flux.1-dev.json  svdq-flux.1-fill.json  svdq-flux.1-schnell.json
debug/: flux.1-fill-dev16.py  flux.1-fill-dev4.py  get_image_and_mask.py  split_lora.py
dev-scripts/: flux_depth_lora.py
docker/: Dockerfile  Dockerfile.torch27  Dockerfile.torch28
docs/: contribution_guide.md  contribution_guide_ZH.md  doxyfile  faq.md  faq_ZH.md  setup_windows.md
examples/: controlnet-flux-cache.py  controlnet-flux.py  flux-dyn-caching.py  flux.1-canny-dev-lora.py  flux.1-canny-dev.py  flux.1-depth-dev-lora.py  flux.1-depth-dev.py  flux.1-dev-IP-adapter.py  flux.1-dev-cache.py  flux.1-dev-colossus.py  flux.1-dev-controlnet-union-pro.py  flux.1-dev-double_cache.py  flux.1-dev-double_cache_offloading.py  flux.1-dev-fp16attn.py  flux.1-dev-lora.py  flux.1-dev-multiple-lora.py  flux.1-dev-offload.py  flux.1-dev-pulid.py  flux.1-dev-qencoder.py  flux.1-dev-teacache-batch.py  flux.1-dev-teacache.py  flux.1-dev-turing.py  flux.1-dev.py  flux.1-fill-dev.py  flux.1-kontext-FALAI_lora.py  flux.1-kontext-dev-teacache.py  flux.1-kontext-dev.py  flux.1-krea-dev.py  flux.1-redux-dev.py  flux.1-schnell-qencoder.py  flux.1-schnell.py  fp4-flux.1-dev.py  fp4-flux.1-schnell.py  int4-flux.1-canny-dev-lora.py  int4-flux.1-canny-dev.py  int4-flux.1-depth-dev-lora.py  int4-flux.1-depth-dev.py  int4-flux.1-dev-cache.py  int4-flux.1-dev-lora.py  int4-flux.1-dev-offload.py  (+19 more)
examples_ywu/: flux.1-dev.py  flux.1-kontext-dev.py  flux.1-schnell.py  qwen-image-edit-2509-lightning.py  qwen-image-edit-2509-lightning_batch.py  qwen-image-edit-2509-lightning_bg_replace.py  qwen-image-edit-2509-lightning_original_bg_replace.py  qwen-image-edit-2509.py  qwen-image-edit-2509_bg_replace.py  qwen-image-edit-2509_original.py  qwen-image-edit-2509_original_inpainting_lora.py  qwen-image-edit-lightning.py  qwen-image-edit-lightning_bg_replace.py  qwen-image-edit-lora_bg_replacement.py  qwen-image-edit.py  qwen-image-edit_bg_replacement.py  qwen-image-lightning.py  qwen-image-lightning_original.py  qwen-image-lightning_vl_AWQ.py  qwen-image.py  sana_1600m.py  sana_1600m_pag.py  test_flux2_klein_4B_edit.py  test_gpu.py  test_qwen-edit-2509_lightening_bc240.py
nunchaku/: __init__.py  __version__.py  convert_lora.py  merge_models.py  merge_safetensors.py  merge_t5.py  test.py  utils.py
scripts/: build_all_dockers.sh  build_all_linux_wheels.sh  build_all_windows_wheels.cmd  build_docker.sh  build_docker_torch27.sh  build_docker_torch28.sh  build_linux_wheel.sh  build_linux_wheel_cu128.sh  build_linux_wheel_torch2.7_cu128.sh  build_linux_wheel_torch2.8.sh  build_linux_wheel_torch_nightly.sh  build_linux_wheels.sh  build_windows_wheel.cmd  build_windows_wheel_cu128.cmd  build_windows_wheel_torch2.8.cmd  build_windows_wheel_torch_nightly.cmd  build_windows_wheels.ps1  linux_cleanup.sh  run_all_tests.py  sync_hf_to_ms.py
scripts_ywu/: download_CrispEdit-2M.py
src/: FluxModel.cpp  FluxModel.h  Linear.cpp  Linear.h  Module.cpp  Module.h  SanaModel.cpp  SanaModel.h  Serialization.cpp  Serialization.h  Tensor.h  activation.cpp  activation.h  common.h  debug.h  layernorm.cpp  layernorm.h  pytorch_compat.h
tests/: README.md  requirements.txt  utils.py
(+326 files in other folders)
